--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -37,6 +37,11 @@
             </ul>
           </li>
           <li class="dropdown">
+            <a id="inbox" href="#" class="navbar-icons">
+              <i class="fa fa-inbox"></i>
+            </a>
+          </li>
+          <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img class="navbar-avatar" src="https://en.gravatar.com/userimage/23763355/e7bbf514106dc2fd9ddb4e8160a72e8c.png" alt="Profile"> sudharti <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="#">Profile</a></li>
@@ -77,11 +82,11 @@
           </div>
           <div class="panel-body">
             <ul class="panel-list">
-              <li><a href="#">#Meth</a></li>
-              <li><a href="#">#Heisenberg</a></li>
-              <li><a href="#">#LosPollos</a></li>
-              <li><a href="#">#Crystal</a></li>
-              <li><a href="#">#DEA</a></li>
+              <li><a href="#">#Theme</a></li>
+              <li><a href="#">#Bootstrap</a></li>
+              <li><a href="#">#Rails</a></li>
+              <li><a href="#">#Blog</a></li>
+              <li><a href="#">#Javascript</a></li>
             </ul>
           </div>
         </div>
@@ -105,11 +110,12 @@
                 <img src="img/avatar.png" alt="" class="avatar">
               </div>
               <div class="col-lg-9">
-                <span class="name">Walter White</span>
-                <span class="username">@heisenberg</span>
+                <span class="name">Blogaholic</span>
+                <span class="username">@blogaholic</span>
                 <div class="post"> 
-                  <span class="mention">@random_guy</span>  You are Godamn Right!
-                  <span class="hashtags">#Heisenberg</span>
+                  Building a Bootstrap Theme - Awesome post by <span class="mention">@uiux_</span>
+                  <a href="#">p.co/btstrpThm</a>
+                  <span class="hashtags">#Theme #Bootstrap</span>
                 </div>
 
               </div>
@@ -124,9 +130,9 @@
                 <img src="img/avatar_2.png" alt="" class="avatar">
               </div>
               <div class="col-lg-9">
-                <span class="name">Jesse Pinkman</span>
-                <span class="username">@science_btch</span>
-                <div class="post">Science B*tch.</div>
+                <span class="name">UI UX Guy</span>
+                <span class="username">@uiux_</span>
+                <div class="post">Published my post on Building a Bootstrap Theme <a href="#">p.co/btstrpThm</a></div>
               </div>
               <div class="col-lg-2">
                 <span class="time">7 mins</span>
@@ -139,9 +145,9 @@
                 <img src="img/avatar_3.png" alt="" class="avatar">
               </div>
               <div class="col-lg-9">
-                <span class="name">Jesse Pinkman</span>
-                <span class="username">@science_btch</span>
-                <div class="post">Wassup Yo! Wassup with you dudes?</div>
+                <span class="name">Rails Freak</span>
+                <span class="username">@rails_freak</span>
+                <div class="post">Ruby on Rails is Awesome! <a href="#">p.co/RoRawsme</a> <span class="hashtags">#Rails</span></div>
               </div>
               <div class="col-lg-2">
                 <span class="time">9 mins</span>
@@ -154,11 +160,11 @@
                 <img src="img/avatar_4.png" alt="" class="avatar">
               </div>
               <div class="col-lg-9">
-                <span class="name">Gus Fring</span>
-                <span class="username">@gus</span>
+                <span class="name">Developer</span>
+                <span class="username">@Dev</span>
                 <div class="post">
-                  Would you like to fill out a feedback? I would be happy to refer to our website. 
-                  <span class="hashtags">#LosPollos</span></div>
+                  Websockets are future tech - We aren't there yet! 
+                  <span class="hashtags">#Websockets #Javascript</span></div>
                 </div>
                 <div class="col-lg-2">
                   <span class="time">13 mins</span>
@@ -168,14 +174,13 @@
             <div id="post-2912911" class="micropost">
               <div class="row">
                 <div class="col-lg-1">
-                  <img src="img/avatar.png" alt="" class="avatar">
+                  <img src="https://en.gravatar.com/userimage/23763355/e7bbf514106dc2fd9ddb4e8160a72e8c.png" alt="" class="avatar">
                 </div>
                 <div class="col-lg-9">
-                  <span class="name">Walter White</span>
-                  <span class="username">@heisenberg</span>
+                  <span class="name">Sudharsanan M</span>
+                  <span class="username">@sudharti</span>
                   <div class="post">
-                    <span class="mention">@random_guy</span> 
-                    Say my name!
+                    Why should you do Side Projects <a href="#">p.co/wsydSPr</a>
                   </div>
                 </div>
                 <div class="col-lg-2">
@@ -189,12 +194,11 @@
                   <img src="img/avatar_4.png" alt="" class="avatar">
                 </div>
                 <div class="col-lg-9">
-                  <span class="name">Hank Schrader</span>
-                  <span class="username">@asac_schrader</span>
+                  <span class="name">Developer</span>
+                  <span class="username">@Dev</span>
                   <div class="post">
-                    <span class="mention">@jack</span> 
-                    My name is ASAC Schrader. And you can go f*** yourself. 
-                    <span class="hashtags">#DEA #Heisenberg</span>
+                    Awesome Read - How maintaining a Blog saved my ass <a href="#">p.co/hmBsAs</a>
+                    <span class="hashtags">#Blog</span>
                   </div>
                 </div>
                 <div class="col-lg-2">
@@ -208,12 +212,11 @@
                   <img src="img/avatar_2.png" alt="" class="avatar">
                 </div>
                 <div class="col-lg-9">
-                  <span class="name">Jesse Pinkman</span>
-                  <span class="username">@science_btch</span>
+                  <span class="name">UI UX Guy</span>
+                  <span class="username">@uiux_</span>
                   <div class="post">
-                    <span class="mention">@heisenberg</span> 
-                    This is absolute genius!
-                    <span class="hashtags">#Meth #Crystal</span>
+                    Medium's theme is so f**cking good. <a href="#">p.co/mdmThfg</a>
+                    <span class="hashtags">#Medium #CSS</span>
                   </div>
                 </div>
                 <div class="col-lg-2">
@@ -227,11 +230,12 @@
                   <img src="img/avatar_3.png" alt="" class="avatar">
                 </div>
                 <div class="col-lg-9">
-                  <span class="name">Walter White</span>
-                  <span class="username">@heisenberg</span>
+                  <span class="name">Rails Freak</span>
+                  <span class="username">@rails_freak</span>
                   <div class="post">
-                    <span class="mention">@asac_schrader</span> 
-                    If you do not know who I am ... then maybe your best course...would be to #Tread #Lightly.
+                    RT <span class="mention">@sudharti</span> 
+                    Front-End Javascript frameworks are clearly the future!
+                    <span class="hashtags">#Javascript</span>
                   </div>
                 </div>
                 <div class="col-lg-2">
@@ -245,11 +249,11 @@
                   <img src="img/avatar.png" alt="" class="avatar">
                 </div>
                 <div class="col-lg-9">
-                  <span class="name">Hank Schrader</span>
-                  <span class="username">@asac_schrader</span>
+                  <span class="name">Blogaholic</span>
+                  <span class="username">@blogaholic</span>
                   <div class="post">
-                    <span class="mention">@heisenberg</span> 
-                    I don't know who you are.
+                    How maintaining a Blog saved my ass <a href="#">p.co/hmBsAs</a>
+                    <span class="hashtags">#Blog</span>
                   </div>
                 </div>
                 <div class="col-lg-2">
@@ -273,8 +277,8 @@
                         <img src="img/avatar.png" alt="" class="avatar">
                       </div>
                       <div class="col-lg-9">
-                        <span class="name">Walter White</span>
-                        <span class="username">@the_real_heisenberg</span>
+                        <span class="name">Bootstrap</span>
+                        <span class="username">@bootstrap</span>
                       </div>
                     </div>
                   </a>
@@ -286,8 +290,8 @@
                         <img src="img/avatar_4.png" alt="" class="avatar">
                       </div>
                       <div class="col-lg-9">
-                        <span class="name">Jesse Pinkman</span>
-                        <span class="username">@science_btch</span>
+                        <span class="name">Dev</span>
+                        <span class="username">@dev_</span>
                       </div>
                     </div>
                   </a>
@@ -299,8 +303,8 @@
                         <img src="img/avatar_2.png" alt="" class="avatar">
                       </div>
                       <div class="col-lg-9">
-                        <span class="name">Gus Fring</span>
-                        <span class="username">@gus</span>
+                        <span class="name">User123</span>
+                        <span class="username">@user123</span>
                       </div>
                     </div>
                   </a>
@@ -312,8 +316,8 @@
                         <img src="img/avatar_3.png" alt="" class="avatar">
                       </div>
                       <div class="col-lg-9">
-                        <span class="name">Hank Schrader</span>
-                        <span class="username">@asac_schradder</span>
+                        <span class="name">Rails</span>
+                        <span class="username">@rails</span>
                       </div>
                     </div>
                   </a>
@@ -322,11 +326,11 @@
                   <a href="#">
                     <div class="row">
                       <div class="col-lg-3">
-                        <img src="img/avatar_4.png" alt="" class="avatar">
+                        <img src="img/avatar_3.png" alt="" class="avatar">
                       </div>
                       <div class="col-lg-9">
-                        <span class="name">Skyler White</span>
-                        <span class="username">@skyler</span>
+                        <span class="name">Ruby User's Group</span>
+                        <span class="username">@ruby_group</span>
                       </div>
                     </div>
                   </a>
@@ -336,7 +340,7 @@
           </div>
           <div class="well">
             <div class="footer">
-              <label>© 2014 Author Blog Social-UI About Github Getting Started License</label>
+              <label><a href="#">© 2014</a> | <a href="#">Author</a> | <a href="#">Blog</a> | <a href="#">Paper</a> | <a href="#">About</a> | <a href="#">Github</a> | <a href="#">Getting Started</a> | <a href="#">License</a></label>
             </div>
           </div>
         </div>
