--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -139,6 +139,19 @@
                 <span class="time">4 mins</span>
               </div>
             </div>
+            <div class="row actions">
+              <div class="col-lg-11 col-lg-offset-1">
+                <a href="#">
+                  <i class="fa fa-arrow-left"></i>
+                </a>
+                <a href="#">
+                  <i class="fa fa-retweet"></i>
+                </a>
+                <a href="#">
+                  <i class="fa fa-heart"></i>
+                </a>
+              </div>
+            </div>
           </div>
           <div id="post-2912914" class="micropost">
             <div class="row">
@@ -154,6 +167,19 @@
                 <span class="time">7 mins</span>
               </div>
             </div>
+            <div class="row actions">
+              <div class="col-lg-11 col-lg-offset-1">
+                <a href="#">
+                  <i class="fa fa-arrow-left"></i>
+                </a>
+                <a href="#">
+                  <i class="fa fa-retweet"></i>
+                </a>
+                <a href="#">
+                  <i class="fa fa-heart"></i>
+                </a>
+              </div>
+            </div>
           </div>
           <div id="post-2912913" class="micropost">
             <div class="row">
@@ -167,6 +193,19 @@
               </div>
               <div class="col-lg-2">
                 <span class="time">9 mins</span>
+              </div>
+            </div>
+            <div class="row actions">
+              <div class="col-lg-11 col-lg-offset-1">
+                <a href="#">
+                  <i class="fa fa-arrow-left"></i>
+                </a>
+                <a href="#">
+                  <i class="fa fa-retweet"></i>
+                </a>
+                <a href="#">
+                  <i class="fa fa-heart"></i>
+                </a>
               </div>
             </div>
           </div>
@@ -186,6 +225,19 @@
                   <span class="time">13 mins</span>
                 </div>
               </div>
+              <div class="row actions">
+                <div class="col-lg-11 col-lg-offset-1">
+                  <a href="#">
+                    <i class="fa fa-arrow-left"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa fa-retweet"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa fa-heart"></i>
+                  </a>
+                </div>
+              </div>
             </div>
             <div id="post-2912911" class="micropost">
               <div class="row">
@@ -201,6 +253,19 @@
                 </div>
                 <div class="col-lg-2">
                   <span class="time">14 mins</span>
+                </div>
+              </div>
+              <div class="row actions">
+                <div class="col-lg-11 col-lg-offset-1">
+                  <a href="#">
+                    <i class="fa fa-arrow-left"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa fa-retweet disabled"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa fa-heart"></i>
+                  </a>
                 </div>
               </div>
             </div>
@@ -221,6 +286,19 @@
                   <span class="time">15 mins</span>
                 </div>
               </div>
+              <div class="row actions">
+                <div class="col-lg-11 col-lg-offset-1">
+                  <a href="#">
+                    <i class="fa fa-arrow-left"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa fa-retweet"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa fa-heart"></i>
+                  </a>
+                </div>
+              </div>
             </div>
             <div id="post-2912909" class="micropost">
               <div class="row">
@@ -237,6 +315,19 @@
                 </div>
                 <div class="col-lg-2">
                   <span class="time">18 mins</span>
+                </div>
+              </div>
+              <div class="row actions">
+                <div class="col-lg-11 col-lg-offset-1">
+                  <a href="#">
+                    <i class="fa fa-arrow-left"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa fa-retweet"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa fa-heart"></i>
+                  </a>
                 </div>
               </div>
             </div>
@@ -258,6 +349,19 @@
                   <span class="time">19 mins</span>
                 </div>
               </div>
+              <div class="row actions">
+                <div class="col-lg-11 col-lg-offset-1">
+                  <a href="#">
+                    <i class="fa fa-arrow-left"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa fa-retweet"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa fa-heart"></i>
+                  </a>
+                </div>
+              </div>
             </div>
             <div id="post-2912907" class="micropost">
               <div class="row">
@@ -274,6 +378,19 @@
                 </div>
                 <div class="col-lg-2">
                   <span class="time">20 mins</span>
+                </div>
+              </div>
+              <div class="row actions">
+                <div class="col-lg-11 col-lg-offset-1">
+                  <a href="#">
+                    <i class="fa fa-arrow-left"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa fa-retweet"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa fa-heart"></i>
+                  </a>
                 </div>
               </div>
             </div>
