--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -33,22 +33,39 @@
               <li>
                 <a href="#">
                   <h5><b>New Post</b></h5>
-                  <span>
-                    @rails_freak shared a new micropost<br>
-                    Ruby on Rails is Awesome! p.co/RoRawsme #Rails
-                  </span>
+                  <span class="mention">@rails_freak</span> <span>shared a new micropost<br>
+                    <span>Ruby on Rails is Awesome!</span> <span class="link">p.co/RoRawsme</span> 
+                    <span class="hashtags">#Rails</span>
                 </a>
               </li>
               <li>
                 <a href="#">
                   <h5><b>@Mention</b></h5>
-                  <span>
-                    @rails_freak mentioned you in a micropost      
-                  </span>
+                  <span class="mention">@rails_freak</span>
+                  <span>mentioned you in a micropost</span>
                 </a>
               </li>
-              <li><a href="#">Notification 3</a></li>
-              <li><a href="#">Notification 4</a></li>
+              <li>
+                <a href="#">
+                  <h5><b>Trends</b></h5>
+                  <span class="hashtags">#Rails</span>
+                  <span> - Topic you are following is trending!</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <h5><b>Followers</b></h5>
+                  <span>Yay!</span> <span class="mention">@rails_freak</span> 
+                  <span>and</span>
+                  <span class="mention">@Dev</span> 
+                  <span>followed you</span>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="text-center">
+                  <span><b><i class="fa fa-bars"></i> More Notifications</b></span>
+                </a>
+              </li>
             </ul>
           </li>
           <li class="dropdown">
