--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -30,6 +30,9 @@
               <i class="fa fa-bell-o"></i>
             </a>
             <ul class="dropdown-menu" role="menu">
+              <li class="dropdown-title">
+                <h5><b>Notifications</b></h5>
+              </li>
               <li>
                 <a href="#">
                   <h5><b>New Post</b></h5>
@@ -63,23 +66,52 @@
               </li>
               <li>
                 <a href="#" class="text-center">
-                  <span><b><i class="fa fa-bars"></i> More Notifications</b></span>
+                  <span><b><i class="fa fa-bars"></i> More</b></span>
                 </a>
               </li>
             </ul>
           </li>
           <li class="dropdown">
-            <a id="inbox" href="#" class="navbar-icons">
+            <a id="inbox" href="#" class="dropdown-toggle navbar-icons" data-toggle="dropdown">
               <i class="fa fa-inbox"></i>
             </a>
-          </li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img class="navbar-avatar" src="https://en.gravatar.com/userimage/23763355/e7bbf514106dc2fd9ddb4e8160a72e8c.png" alt="Profile"> sudharti <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Profile</a></li>
-              <li><a href="#">Settings</a></li>
-              <li><a href="landing.html">Logout</a></li>
+              <li class="dropdown-title">
+                <h5><b>Messages</b></h5>
+              </li>
+              <li>
+                <a href="#">
+                  <h6><b>@rails_freak</b></h6>
+                  <span>Hey! Checkout my new post. Thanks!</span> <span class="link">p.co/RoRawsme</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <h6><b>@blogaholic</b></h6>
+                  <span>Hey man! Wassup?</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <h6><b>@uiux_</b></h6>
+                  <span>Medium's UI is f***ing awesome</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <h6><b>@Dev</b></h6>
+                  <span>What's your view on Websockets? Let me know</span>
+                </a>
+              </li>
+               <li>
+                <a href="#" class="text-center">
+                  <span><b><i class="fa fa-bars"></i> More</b></span>
+                </a>
+              </li>
             </ul>
+          </li>
+          <li>
+            <a href="#"><img class="navbar-avatar" src="https://en.gravatar.com/userimage/23763355/e7bbf514106dc2fd9ddb4e8160a72e8c.png" alt="Profile"> sudharti </a>
           </li>
         </ul>
         <form class="navbar-form navbar-right" role="search">
