--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -128,7 +128,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-lg-3">
+      <div class="col-lg-3 col-md-3">
         <div class="well">
           <div class="cover-pic">
             <img src="https://en.gravatar.com/userimage/23763355/e7bbf514106dc2fd9ddb4e8160a72e8c.png" alt="" class="profile-pic">
@@ -155,7 +155,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-md-5">
         <div class="panel panel-default">
           <div id="new-micropost" class="panel-body">
             <form role="form">
@@ -171,10 +171,10 @@
         <div id="microposts" class="well">
           <div id="post-2912915" class="micropost">
             <div class="row">
-              <div class="col-lg-1">
+              <div class="col-lg-1 col-md-1 col-xs-1">
                 <img src="img/avatar.png" alt="" class="avatar">
               </div>
-              <div class="col-lg-9">
+              <div class="col-lg-9 col-md-11 col-xs-11">
                 <span class="name">Blogaholic</span>
                 <span class="username">@blogaholic</span>
                 <div class="post"> 
@@ -182,9 +182,8 @@
                   <a href="#">p.co/btstrpThm</a>
                   <span class="hashtags">#Theme #Bootstrap</span>
                 </div>
-
               </div>
-              <div class="col-lg-2">
+              <div class="col-lg-2 col-lg-offset-0 col-md-4 col-md-offset-2 col-xs-4 col-xs-offset-2">
                 <span class="time">4 mins</span>
               </div>
             </div>
@@ -204,15 +203,15 @@
           </div>
           <div id="post-2912914" class="micropost">
             <div class="row">
-              <div class="col-lg-1">
+              <div class="col-lg-1 col-md-1 col-xs-1">
                 <img src="img/avatar_2.png" alt="" class="avatar">
               </div>
-              <div class="col-lg-9">
+              <div class="col-lg-9 col-md-11 col-xs-11">
                 <span class="name">UI UX Guy</span>
                 <span class="username">@uiux_</span>
                 <div class="post">Published my post on Building a Bootstrap Theme <a href="#">p.co/btstrpThm</a></div>
               </div>
-              <div class="col-lg-2">
+              <div class="col-lg-2 col-lg-offset-0 col-md-4 col-md-offset-2 col-xs-4 col-xs-offset-2">
                 <span class="time">7 mins</span>
               </div>
             </div>
@@ -232,15 +231,15 @@
           </div>
           <div id="post-2912913" class="micropost">
             <div class="row">
-              <div class="col-lg-1">
+              <div class="col-lg-1 col-md-1 col-xs-1">
                 <img src="img/avatar_3.png" alt="" class="avatar">
               </div>
-              <div class="col-lg-9">
+              <div class="col-lg-9 col-md-11 col-xs-11">
                 <span class="name">Rails Freak</span>
                 <span class="username">@rails_freak</span>
                 <div class="post">Ruby on Rails is Awesome! <a href="#">p.co/RoRawsme</a> <span class="hashtags">#Rails</span></div>
               </div>
-              <div class="col-lg-2">
+              <div class="col-lg-2 col-lg-offset-0 col-md-4 col-md-offset-2 col-xs-4 col-xs-offset-2">
                 <span class="time">9 mins</span>
               </div>
             </div>
@@ -260,17 +259,17 @@
           </div>
           <div id="post-2912912" class="micropost">
             <div class="row">
-              <div class="col-lg-1">
+              <div class="col-lg-1 col-md-1 col-xs-1">
                 <img src="img/avatar_4.png" alt="" class="avatar">
               </div>
-              <div class="col-lg-9">
+              <div class="col-lg-9 col-md-11 col-xs-11">
                 <span class="name">Developer</span>
                 <span class="username">@Dev</span>
                 <div class="post">
                   Websockets are future tech - We aren't there yet! 
                   <span class="hashtags">#Websockets #Javascript</span></div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-lg-offset-0 col-md-4 col-md-offset-2 col-xs-4 col-xs-offset-2">
                   <span class="time">13 mins</span>
                 </div>
               </div>
@@ -290,17 +289,17 @@
             </div>
             <div id="post-2912911" class="micropost">
               <div class="row">
-                <div class="col-lg-1">
+                <div class="col-lg-1 col-md-1 col-xs-1">
                   <img src="https://en.gravatar.com/userimage/23763355/e7bbf514106dc2fd9ddb4e8160a72e8c.png" alt="" class="avatar">
                 </div>
-                <div class="col-lg-9">
+                <div class="col-lg-9 col-md-11 col-xs-11">
                   <span class="name">Sudharsanan M</span>
                   <span class="username">@sudharti</span>
                   <div class="post">
                     Why should you do Side Projects <a href="#">p.co/wsydSPr</a>
                   </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-lg-offset-0 col-md-4 col-md-offset-2 col-xs-4 col-xs-offset-2">
                   <span class="time">14 mins</span>
                 </div>
               </div>
@@ -320,10 +319,10 @@
             </div>
             <div id="post-2912910" class="micropost">
               <div class="row">
-                <div class="col-lg-1">
+                <div class="col-lg-1 col-md-1 col-xs-1">
                   <img src="img/avatar_4.png" alt="" class="avatar">
                 </div>
-                <div class="col-lg-9">
+                <div class="col-lg-9 col-md-11 col-xs-11">
                   <span class="name">Developer</span>
                   <span class="username">@Dev</span>
                   <div class="post">
@@ -331,7 +330,7 @@
                     <span class="hashtags">#Blog</span>
                   </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-lg-offset-0 col-md-4 col-md-offset-2 col-xs-4 col-xs-offset-2">
                   <span class="time">15 mins</span>
                 </div>
               </div>
@@ -351,10 +350,10 @@
             </div>
             <div id="post-2912909" class="micropost">
               <div class="row">
-                <div class="col-lg-1">
+                <div class="col-lg-1 col-md-1 col-xs-1">
                   <img src="img/avatar_2.png" alt="" class="avatar">
                 </div>
-                <div class="col-lg-9">
+                <div class="col-lg-9 col-md-11 col-xs-11">
                   <span class="name">UI UX Guy</span>
                   <span class="username">@uiux_</span>
                   <div class="post">
@@ -362,7 +361,7 @@
                     <span class="hashtags">#Medium #CSS</span>
                   </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-lg-offset-0 col-md-4 col-md-offset-2 col-xs-4 col-xs-offset-2">
                   <span class="time">18 mins</span>
                 </div>
               </div>
@@ -382,10 +381,10 @@
             </div>
             <div id="post-2912908" class="micropost">
               <div class="row">
-                <div class="col-lg-1">
+                <div class="col-lg-1 col-md-1 col-xs-1">
                   <img src="img/avatar_3.png" alt="" class="avatar">
                 </div>
-                <div class="col-lg-9">
+                <div class="col-lg-9 col-md-11 col-xs-11">
                   <span class="name">Rails Freak</span>
                   <span class="username">@rails_freak</span>
                   <div class="post">
@@ -394,7 +393,7 @@
                     <span class="hashtags">#Javascript</span>
                   </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-lg-offset-0 col-md-4 col-md-offset-2 col-xs-4 col-xs-offset-2">
                   <span class="time">19 mins</span>
                 </div>
               </div>
@@ -414,10 +413,10 @@
             </div>
             <div id="post-2912907" class="micropost">
               <div class="row">
-                <div class="col-lg-1">
+                <div class="col-lg-1 col-md-1 col-xs-1">
                   <img src="img/avatar.png" alt="" class="avatar">
                 </div>
-                <div class="col-lg-9">
+                <div class="col-lg-9 col-md-11 col-xs-11">
                   <span class="name">Blogaholic</span>
                   <span class="username">@blogaholic</span>
                   <div class="post">
@@ -425,7 +424,7 @@
                     <span class="hashtags">#Blog</span>
                   </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-lg-offset-0 col-md-4 col-md-offset-2 col-xs-4 col-xs-offset-2">
                   <span class="time">20 mins</span>
                 </div>
               </div>
@@ -445,7 +444,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-md-4">
           <div id="suggestions" class="panel panel-default">
             <div class="panel-heading">
               <h3 class="panel-title"><b>Suggestions</b></h3>
@@ -455,14 +454,14 @@
                 <li>
                   <a href="#">
                     <div class="row">
-                      <div class="col-lg-3">
+                      <div class="col-lg-3 col-md-3 col-xs-2">
                         <img src="img/avatar.png" alt="" class="avatar">
                       </div>
-                      <div class="col-lg-5">
+                      <div class="col-lg-5 col-md-5 col-xs-3">
                         <span class="name">Bootstrap</span>
                         <span class="username">@bootstrap</span>
                       </div>
-                      <div class="col-lg-4">
+                      <div class="col-lg-4 col-md-4 col-md-offset-0 col-xs-4 col-xs-offset-3">
                         <button class="btn btn-success btn-sm">
                           Follow
                         </button>
@@ -473,14 +472,14 @@
                 <li>
                   <a href="#">
                     <div class="row">
-                      <div class="col-lg-3">
+                      <div class="col-lg-3 col-md-3 col-xs-2">
                         <img src="img/avatar_4.png" alt="" class="avatar">
                       </div>
-                      <div class="col-lg-5">
+                      <div class="col-lg-5 col-md-5 col-xs-3">
                         <span class="name">Dev</span>
                         <span class="username">@dev_</span>
                       </div>
-                      <div class="col-lg-4">
+                      <div class="col-lg-4 col-md-4 col-md-offset-0 col-xs-4 col-xs-offset-3">
                         <button class="btn btn-success btn-sm">
                           Follow
                         </button>
@@ -491,14 +490,14 @@
                 <li>
                   <a href="#">
                     <div class="row">
-                      <div class="col-lg-3">
+                      <div class="col-lg-3 col-md-3 col-xs-2">
                         <img src="img/avatar_2.png" alt="" class="avatar">
                       </div>
-                      <div class="col-lg-5">
+                      <div class="col-lg-5 col-md-5 col-xs-3">
                         <span class="name">User123</span>
                         <span class="username">@user123</span>
                       </div>
-                      <div class="col-lg-4">
+                      <div class="col-lg-4 col-md-4 col-md-offset-0 col-xs-4 col-xs-offset-3">
                         <button class="btn btn-success btn-sm">
                           Follow
                         </button>
@@ -509,14 +508,14 @@
                 <li>
                   <a href="#">
                     <div class="row">
-                      <div class="col-lg-3">
+                      <div class="col-lg-3 col-md-3 col-xs-2">
                         <img src="img/avatar_3.png" alt="" class="avatar">
                       </div>
-                      <div class="col-lg-5">
+                      <div class="col-lg-5 col-md-5 col-xs-3">
                         <span class="name">Rails</span>
                         <span class="username">@rails</span>
                       </div>
-                      <div class="col-lg-4">
+                      <div class="col-lg-4 col-md-4 col-md-offset-0 col-xs-4 col-xs-offset-3">
                         <button class="btn btn-success btn-sm">
                           Follow
                         </button>
@@ -527,14 +526,14 @@
                 <li>
                   <a href="#">
                     <div class="row">
-                      <div class="col-lg-3">
+                      <div class="col-lg-3 col-md-3 col-xs-2">
                         <img src="img/avatar_3.png" alt="" class="avatar">
                       </div>
-                      <div class="col-lg-5">
+                      <div class="col-lg-5 col-md-5 col-xs-3">
                         <span class="name">Ruby User's Group</span>
                         <span class="username">@ruby_group</span>
                       </div>
-                      <div class="col-lg-4">
+                      <div class="col-lg-4 col-md-4 col-md-offset-0 col-xs-4 col-xs-offset-3">
                         <button class="btn btn-success btn-sm">
                           Follow
                         </button>
