--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
           <div class="row">
             <div class="col-lg-6 col-sm-6 col-xs-12 col-md-6">
               <div class="thumbnail">
-                <img src="../assets/img/blog.jpg" alt="..." class="img-preview">
+                <img src="../assets/img/timeline.jpg" alt="..." class="img-preview">
                 <div class="caption">
                   <h4 class="text-center"><b>Timeline</b></h4><br>
                   <p class="text-center"><a href="timeline.html" class="btn btn-success" role="button">Live Preview</a></p>
