Add color swatches

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,11 @@
     display: none;
   }  
 }
+
+.swatch {
+  color: white;
+  height: 70px;
+  width: 75px;
+  border: none;
+  font-weight: bold;
+}
