--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,14 @@
                 <img src="../assets/img/landing.jpg" alt="..." class="img-preview">
                 <div class="caption">
                   <h4 class="text-center"><b>Landing Page</b></h4><br>
-                  <p class="text-center"><a href="landing.html" target="_blank" class="btn btn-success" role="button">Live Preview</a></p>
+                  <p class="text-center">
+                    <a href="landing.html" target="_blank" class="btn btn-success" role="button">
+                      Live Preview
+                    </a>
+                    <a href="#" class="btn btn-primary">
+                      <i class="fa fa-code"></i> Code
+                    </a>
+                  </p>
                 </div>
               </div>
             </div>
@@ -59,7 +66,14 @@
                 <img src="../assets/img/login.jpg" alt="..." class="img-preview">
                 <div class="caption">
                   <h4 class="text-center"><b>Login Page</b></h4><br>
-                  <p class="text-center"><a href="login.html" target="_blank" class="btn btn-success" role="button">Live Preview</a></p>
+                    <p class="text-center">
+                      <a href="login.html" target="_blank" class="btn btn-success" role="button">
+                        Live Preview
+                      </a>
+                      <a href="#" class="btn btn-primary">
+                        <i class="fa fa-code"></i> Code
+                      </a>
+                    </p>
                 </div>
               </div>
             </div>
@@ -70,7 +84,14 @@
                 <img src="../assets/img/timeline.jpg" alt="..." class="img-preview">
                 <div class="caption">
                   <h4 class="text-center"><b>Timeline</b></h4><br>
-                  <p class="text-center"><a href="timeline.html" target="_blank" class="btn btn-success" role="button">Live Preview</a></p>
+                  <p class="text-center">
+                    <a href="timeline.html" target="_blank" class="btn btn-success" role="button">
+                      Live Preview
+                    </a>
+                    <a href="#" class="btn btn-primary">
+                      <i class="fa fa-code"></i> Code
+                    </a>
+                  </p>
                 </div>
               </div>
             </div>
@@ -79,7 +100,14 @@
                 <img src="../assets/img/blog.jpg" alt="..." class="img-preview">
                 <div class="caption">
                   <h4 class="text-center"><b>Blog</b></h4><br>
-                  <p class="text-center"><a href="blog.html" target="_blank" class="btn btn-success" role="button">Live Preview</a></p>
+                  <p class="text-center">
+                    <a href="blog.html" target="_blank" class="btn btn-success" role="button">
+                      Live Preview
+                    </a>
+                    <a href="#" class="btn btn-primary">
+                      <i class="fa fa-code"></i> Code
+                    </a>
+                  </p>
                 </div>
               </div>
             </div>
