--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -546,7 +546,14 @@
           </div>
           <div class="well">
             <div class="footer">
-              <label><a href="#"><a href="#">Author</a> | <a href="#">Blog</a> | <a href="#">Paper</a> | <a href="#">About</a> | <a href="#">Github</a> | <a href="#">Getting Started</a> | <a href="#">License</a></label>
+              <h5><b>Paper</b></h5>
+              <a href="#">Author</a> 
+              <a href="#">Blog</a> 
+              <a href="#">Paper</a> 
+              <a href="#">About</a> 
+              <a href="#">Github</a> 
+              <a href="#">Getting Started</a> 
+              <a href="#">License</a>
             </div>
           </div>
         </div>
